<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/used_unit"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edtunit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/used_unit"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btncalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:layout_marginTop="10dp"
            android:background="#008577"
            android:textSize="15sp"/>


        <LinearLayout
            android:id="@+id/lnlresult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:background="@color/grey_200"
                android:padding="@dimen/margin_x_small"
                android:paddingTop="@dimen/margin_x_small"
                android:paddingBottom="@dimen/margin_x_small"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tvunit"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/label_description"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/tvunitprice"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="161dp"
                    android:text="@string/label_unit_price"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvtotalcost"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/label_sub_total_cost"
                    android:textStyle="bold" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_marginTop="30dp"
                android:background="@color/grey_200"
                android:padding="@dimen/margin_x_small">

                <TextView
                    android:id="@+id/tvunitresult"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    android:text=""
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvunitpriceresult"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    android:text=""
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvtotalcostresult"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    android:text=""
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>